[fix] - try to fix overflow x

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /*==============================*/
 /*AJUSTES GENERALES*/
 /*==============================*/
+:root {
+  overflow-x: hidden;
+}
 
 body {
   margin: 0;
